--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,35 @@
 .App {
-  text-align: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-.main-container {
-  width: 60vh;
-  height: 80vh;
-}
-
-.left-sidebar, .right-sidebar {
-  width: 20vh;
-  height: 80vh;
+.container {
+  display: flex;
+  flex-wrap: row;
 }
 
 .header {
-  width: 100vh;
+  width: 100%;
+  margin: 0;
+  border: thin solid gray;
 }
+
+.main-container {
+  flex-grow: 12;
+  min-width: 600px;
+  margin: 0;
+  height: 100vh;
+  border: thin solid gray;
+}
+
+.left-sidebar, .right-sidebar {
+  flex-grow: 1;
+  height: 100vh;
+  border: thin solid gray;
+  min-width: 200px;
+}
+
+.left-sidebar#resizable {
+
+} 
