--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
