Implement socket context that creates socketio client and connects to socket server. Create MessageBar component that gets user's entered message.

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,12 @@
   min-width: 200px;
 }
 
-/* .left-sidebar#resizable {
+.roomchat-container {
+  height: 90vh;
+  display: flex;
+}
 
-}  */
+.message-bar {
+  align-self: flex-end;
+  margin: 0 0 20px 20px;
+}
