--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,16 @@
 .roomchat-container {
   height: 90vh;
   display: flex;
+  flex-direction: column;
 }
 
 .message-bar {
-  align-self: flex-end;
+  position: fixed;
+  bottom: 0;
   margin: 0 0 20px 20px;
+}
+
+.message-container {
+  display: flex;
+  flex-direction: column;
 }
