Available rooms now displayed in left sidebar.

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,8 @@
   margin: 0 0 20px 20px;
 }
 
-.message-container {
+.message-container, 
+.rooms-container {
   display: flex;
   flex-direction: column;
 }
