Adds initial message bubbles for room chat, adjusts header styling.

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,9 @@
 }
 
 #onlineUsers {
-  margin: 10px;
+  margin: .8rem;
   position: absolute;
-  right: 3.7rem;
+  right: 3.3rem;
 }
 
 #profileBtn {
@@ -64,8 +64,8 @@
 
 .main-container {
   flex-grow: 12;
-  min-width: 600px;
-  margin: 0;
+  min-width: 400px;
+  margin-right: 200;
   height: 100vh;
   background-color: #36393f;
   color: white;
@@ -91,11 +91,13 @@
 }
 
 #landing {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding: 33%;
+  text-align: center;
+  margin: 5rem auto;
   color: #99aab5;
+  margin: 0;
+  position: absolute;
+  top: 43%;
+  left: 50%;
 }
 
 #landing h1 {
@@ -112,8 +114,8 @@
 .message-bar {
   position: fixed;
   bottom: 0;
-  margin: 0 0 30px 20px;
-  min-width: 67%;
+  margin: 30px 20px;
+  width: 68%;
 }
 
 .message-container,
@@ -122,5 +124,24 @@
   flex-direction: column;
   padding: 1.5rem;
   padding-bottom: 3rem;
-  overflow-y: auto;
+  margin: 0 1rem;
+  /* overflow-y: auto; */
+}
+
+.myChatMessage {
+  padding: .5rem 1rem;
+  width: 67%;
+  background: linear-gradient(135deg, #7289DA, #3dc6aa);
+  border-radius: 20px 20px 0 20px;
+  margin: 0 0 15px 33%;
+  /* text-shadow: 1px 1px 3px rgba(0,0,0, 0.4); */
+}
+
+.theirChatMessage {
+  padding: .5rem 1rem;
+  width: 67%;
+  background: linear-gradient(135deg,#9B84EE, #F47B68);
+  border-radius: 0px 20px 20px 20px;
+  margin: 0 33% 15px 0;
+  /* text-shadow: 1px 1px 3px rgba(0,0,0, 0.4); */
 }
