Add TreeView MUI Component to left sidebar that displays available public and private rooms

--- a/src/App.css
+++ b/src/App.css
@@ -123,10 +123,7 @@
 .rooms-container {
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
-  padding-bottom: 3rem;
-  margin: 0 1rem;
-  /* overflow-y: auto; */
+  margin-top: 20px;
 }
 
 .myChatMessage {
