--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,8 @@
 }
 
 .main-container {
+  display: flex;
+  flex-direction: column;
   flex-grow: 12;
   min-width: 400px;
   margin-right: 200;
@@ -70,6 +72,7 @@
   background-color: #36393f;
   color: white;
   padding: 0.6rem;
+  padding-right: 0;
   /* overflow: hidden; */
 }
 
@@ -118,10 +121,8 @@
 }
 
 .message-bar {
-  position: fixed;
-  bottom: 0;
-  margin: 30px 20px;
-  width: 68%;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 .message-container,
