Updates button and chat bubble colors.

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $md-dk-gray: #36393f;
 $gray: #474b52;
 $lt-gray: #99aab5;
 $blue: #7289da;
-$teal: #3dc6aa;
+$teal: #7db1b1;
 $purple: #9b84ee;
 $orange: #f47b68;
 
