style: Run formatter

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,6 @@ $orange: #f47b68;
   font-size: 1.8rem;
 }
 
-
 #onlineUsers {
   margin: 0.8rem;
   position: absolute;
@@ -106,20 +105,22 @@ $orange: #f47b68;
     font-family: 'Kanit', sans-serif;
     font-size: 4rem;
     // text-transform: uppercase;
-    text-shadow: -1px 1px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000, -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
+    text-shadow: -1px 1px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000,
+      -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
     -webkit-text-stroke: 2px black;
     -webkit-font-smoothing: antialiased;
     margin: 0;
   }
 
-  h3, p {
+  h3,
+  p {
     font-weight: 400;
-    letter-spacing: .7px;
+    letter-spacing: 0.7px;
   }
 
   .landBtn {
     border-radius: 22px;
-    margin: 0 .7rem .7rem 0;
+    margin: 0 0.7rem 0.7rem 0;
     width: 205px;
   }
 
@@ -127,13 +128,13 @@ $orange: #f47b68;
     color: $lt-gray;
     cursor: pointer;
     text-decoration: none;
-    transition: .3s ease-in-out;
+    transition: 0.3s ease-in-out;
   }
 
   a:hover {
     color: white;
     text-decoration: none;
-    transition: .3s ease-in-out;
+    transition: 0.3s ease-in-out;
   }
 }
 
@@ -161,7 +162,7 @@ $orange: #f47b68;
   .interestBtn {
     height: 30px;
     border-radius: 15px;
-    margin: .15rem;
+    margin: 0.15rem;
     padding: 3px 12px 0 12px;
   }
 
@@ -223,7 +224,7 @@ $orange: #f47b68;
 }
 
 .myChatMessage {
-  padding: .8rem 1.3rem;
+  padding: 0.8rem 1.3rem;
   font-size: 1.3rem;
   background: linear-gradient(135deg, $blue, $teal);
   border-radius: 25px 25px 0 25px;
@@ -231,7 +232,7 @@ $orange: #f47b68;
 }
 
 .theirChatMessage {
-  padding: .8rem 1.3rem;
+  padding: 0.8rem 1.3rem;
   width: 67%;
   background: linear-gradient(135deg, $purple, $orange);
   border-radius: 0px 25px 25px 25px;
