--- a/src/App.scss
+++ b/src/App.scss
@@ -104,10 +104,11 @@ $orange: #f47b68;
 
   h1 {
     font-family: 'Kanit', sans-serif;
-    font-size: 4rem;
+    font-size: 4.5rem;
+    font-weight: 300;
     // text-transform: uppercase;
-    text-shadow: -1px 1px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000, -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
-    -webkit-text-stroke: 2px black;
+    text-shadow: -2px 2px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000, -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
+    -webkit-text-stroke: 1px black;
     -webkit-font-smoothing: antialiased;
     margin: 0;
   }
@@ -190,6 +191,16 @@ $orange: #f47b68;
   background-color: $dk-gray;
   color: white;
 
+  .rightUserBtn {
+    padding: 8px 10px 5px 10px;
+    width: 175px;
+    height: 24px;
+    border-radius: 12px;
+    margin: .1rem 0;
+    box-shadow: none;
+    justify-content: left;
+  }
+
   .footer {
     display: flex;
     justify-content: center;
@@ -227,7 +238,7 @@ $orange: #f47b68;
   font-size: 1.3rem;
   background: linear-gradient(135deg, $blue, $teal);
   border-radius: 25px 25px 0 25px;
-  margin: 0 0 15px 33%;
+  margin: 0 0 15px 0;
 }
 
 .theirChatMessage {
