--- a/src/App.scss
+++ b/src/App.scss
@@ -105,7 +105,8 @@ $orange: #f47b68;
     font-family: 'Kanit', sans-serif;
     font-size: 4.5rem;
     font-weight: 300;
-    text-shadow: -2px 2px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000, -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
+    text-shadow: -2px 2px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000,
+      -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
     -webkit-text-stroke: 1px black;
     -webkit-font-smoothing: antialiased;
     margin: 0;
@@ -190,6 +191,19 @@ $orange: #f47b68;
   background-color: $dk-gray;
   color: white;
 
+  .matcherBtn {
+    font-family: 'Biryani', sans-serif;
+    border-radius: 22px;
+    margin: 0 0.7rem 0.7rem 0;
+    width: 205px;
+    font-size: 16px;
+    padding: 5px 0px 0px 0px;
+  }
+
+  .roomBtn {
+    font-size: 16px;
+  }
+
   .rightUserList {
     overflow: scroll;
     margin-bottom: 5rem;
@@ -201,7 +215,7 @@ $orange: #f47b68;
     width: 180px;
     height: 34px;
     border-radius: 17px;
-    margin: .1rem 0 .1rem 10px;
+    margin: 0.1rem 0 0.1rem 10px;
     box-shadow: none;
     justify-content: left;
     text-transform: lowercase;
