update styling for Create Room

--- a/src/App.scss
+++ b/src/App.scss
@@ -200,8 +200,8 @@ $orange: #f47b68;
     padding: 5px 0px 0px 0px;
   }
 
-  .roomBtn {
-    font-size: 16px;
+  .createRoomBtn {
+    font-size: 40px;
   }
 
   .rightUserList {
