--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ $purple: #9b84ee;
 $orange: #f47b68;
 
 .App {
-  overflow: hidden;
+  // overflow: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -77,7 +77,7 @@ $orange: #f47b68;
 
 /* MAIN */
 .main-container {
-  // display: flex;
+  display: flex;
   flex-direction: column;
   flex-grow: 12;
   min-width: 400px;
@@ -86,7 +86,8 @@ $orange: #f47b68;
   color: white;
   padding: .6rem;
   padding-right: 0;
-  /* overflow: hidden; */
+  padding-bottom: 2rem;
+  overflow: auto;
 }
 
 .roomTitle {
@@ -144,7 +145,7 @@ $orange: #f47b68;
 
   #profilePaper {
     width: 60%;
-    margin-top: 5%;
+    margin: 5% 0 15% 0;
     display: flex;
     flex-direction: column;
     padding: 2rem 4rem 3rem 4rem;
@@ -177,106 +178,9 @@ $orange: #f47b68;
   }
 }
 
-/* MATCHER */
-#matcher {
-  display: flex;
-  justify-content: center;
-
-  #matcherPaper {
-    width: 40%;
-    margin-top: 5%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-align: center;
-    padding: 4rem;
-  }
-
-  .matchImgContainer {
-    display: flex;
-  }
-
-  .matcherRow {
-    display: flex;
-    justify-content: left;
-    flex-wrap: wrap;
-    text-align: left;
-  }
-
-  .matchChip {
-    margin: .2rem;
-    text-align: left;
-  }
-
-  .matchBtn {
-    // border-radius: 50;
-    margin: 1.5rem .5rem -2rem .5rem;
-    font-size: 2.5rem;
-  }
-}
-/* SIDEBARS */
-.left-sidebar,
-.right-sidebar {
-  display: flex;
-  flex-direction: column;
-  padding: 1.2rem;
-  flex-grow: 1;
-  max-width: 200px;
-  height: 100vh;
-  min-width: 200px;
-  background-color: $dk-gray;
-  color: white;
-
-  .matcherBtn {
-    font-family: 'Biryani', sans-serif;
-    border-radius: 22px;
-    margin: 0 0.7rem 0.7rem 0;
-    width: 205px;
-    font-size: 16px;
-    padding: 5px 0px 0px 0px;
-  }
-
-  .createRoomBtn {
-    font-size: 40px;
-  }
-
-  .rightUserList {
-    overflow: scroll;
-    margin-bottom: 5rem;
-    background-color: $dk-gray;
-  }
-
-  .rightUserBtn {
-    padding: 1px;
-    width: 180px;
-    height: 34px;
-    border-radius: 17px;
-    margin: 0.1rem 0 0.1rem 10px;
-    box-shadow: none;
-    justify-content: left;
-    text-transform: lowercase;
-  }
-
-  .rightAvatar {
-    height: 32px;
-    width: 32px;
-    margin-right: 8px;
-    // border: thin solid $blk-gray;
-  }
-
-  .footer {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    // margin-top: 95%;
-    bottom: 1rem;
-    left: 3.8rem;
-  }
-}
-
 /* CHAT */
 .roomchat-container {
-  height: 85.5vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -286,7 +190,10 @@ $orange: #f47b68;
 }
 
 .message-bar {
-  margin: 0 1.8rem 0 1.1rem;
+  display: flex;
+    flex-direction: column;
+    margin: 0 1.8rem 10% 1.1rem;
+    flex-basis: 10%;
 }
 
 .message-container,
@@ -335,3 +242,104 @@ $orange: #f47b68;
 //   background: $gray;
 //   border-radius: 4px;
 // }
+
+/* MATCHER */
+#matcher {
+  display: flex;
+  justify-content: center;
+
+  #matcherPaper {
+    width: 50%;
+    margin: 5% 0 15% 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    text-align: center;
+    padding: 4rem;
+  }
+
+  #matchCard {
+    overflow: auto;
+    height: 100%;
+  }
+
+  .matchImgContainer {
+    display: flex;
+  }
+
+  .matcherRow {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    text-align: left;
+  }
+
+  .matchChip {
+    margin: .2rem;
+    text-align: left;
+  }
+
+  .matchBtn {
+    // border-radius: 50;
+    margin: 1.5rem .5rem -2rem .5rem;
+    font-size: 2.5rem;
+  }
+}
+/* SIDEBARS */
+.left-sidebar,
+.right-sidebar {
+  display: flex;
+  flex-direction: column;
+  padding: 1.2rem;
+  flex-grow: 1;
+  max-width: 200px;
+  height: 100vh;
+  min-width: 200px;
+  background-color: $dk-gray;
+  color: white;
+  overflow: auto;
+
+  .matcherBtn {
+    font-family: 'Biryani', sans-serif;
+    border-radius: 22px;
+    margin: 0 0.7rem 0.7rem 0;
+    width: 205px;
+    font-size: 16px;
+    padding: 5px 0px 0px 0px;
+  }
+
+  .createRoomBtn {
+    font-size: 40px;
+  }
+
+  .rightUserList {
+    margin-bottom: 5rem;
+    background-color: $dk-gray;
+  }
+
+  .rightUserBtn {
+    padding: 1px;
+    width: 180px;
+    height: 34px;
+    border-radius: 17px;
+    margin: 0.1rem 0 0.1rem 10px;
+    box-shadow: none;
+    justify-content: left;
+    text-transform: lowercase;
+  }
+
+  .rightAvatar {
+    height: 32px;
+    width: 32px;
+    margin-right: 8px;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    // margin-top: 95%;
+    bottom: 1rem;
+    left: 3.8rem;
+  }
+}
