Sent messages alternate position on screen and change styling depending on if current user sent them or if another user sent them.

--- a/src/App.scss
+++ b/src/App.scss
@@ -249,13 +249,13 @@ $orange: #EE8585;
 }
 
 
-#myChatTimeStamp {
+.myChatTimeStamp {
   color: $lt-gray;
   text-align: right;
   margin: 4px 0 0 0;
 }
 
-#theirChatTimeStamp {
+.theirChatTimeStamp {
   color: $lt-gray;
   text-align: left;
   margin: 4px 0 0 66px;
