Styles and formats create room form and button.

--- a/src/App.scss
+++ b/src/App.scss
@@ -357,8 +357,10 @@ $orange: #ee8585;
     padding: 5px 0px 0px 0px;
   }
 
-  .createRoomBtn {
-    font-size: 40px;
+  #createRoomBtn {
+    margin: 0 0 -28px 175px;
+    z-index: 2;
+    color: white;
   }
 
   .rightUserList {
@@ -391,4 +393,19 @@ $orange: #ee8585;
     bottom: 1rem;
     left: 3.8rem;
   }
+}
+
+#createRoomForm {
+  background-color: $gray;
+  color: white;
+  // padding-bottom: 2.5rem;
+}
+
+#room-submit-btn {
+  // position: absolute;
+  // right: 0;
+  width: 100%;
+  padding-top: 6px;
+  border-radius: 17px;
+  margin: 4px 16px;
 }
