--- a/src/App.scss
+++ b/src/App.scss
@@ -183,6 +183,7 @@ $orange: #ee8585;
     border-radius: 22px;
     margin-top: 1.5rem;
     width: 150px;
+    color: white;
   }
 }
 
@@ -408,4 +409,35 @@ $orange: #ee8585;
   padding-top: 6px;
   border-radius: 17px;
   margin: 4px 16px;
+  color: white;
+}
+
+.swal-button--confirm {
+  background-color: $teal;
+  // color: black;
+  border-radius: 18px;
+  font-weight: 300;
+  border: none;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  transition: .2s ease-in-out;
+}
+
+.swal-button--confirm:not([disabled]):hover {
+  background-color: #5f7a7a;
+  transition: .2s ease-in-out;
+}
+
+.swal-button--danger {
+  background-color: #F47B68;
+  // color: black;
+  border-radius: 18px;
+  font-weight: 300;
+  border: none;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  transition: .2s ease-in-out;
+}
+
+.swal-button--danger:not([disabled]):hover {
+  background-color: #9f5a4c;
+  transition: .2s ease-in-out;
 }
