--- a/src/App.scss
+++ b/src/App.scss
@@ -408,7 +408,7 @@ $orange: #ee8585;
   border-radius: 18px;
   font-weight: 300;
   border: none;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
   transition: .2s ease-in-out;
 }
 
@@ -422,7 +422,7 @@ $orange: #ee8585;
   border-radius: 18px;
   font-weight: 300;
   border: none;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
   transition: .2s ease-in-out;
 }
 
