--- a/src/App.scss
+++ b/src/App.scss
@@ -126,6 +126,7 @@ $orange: #ee8585;
     border-radius: 22px;
     margin: 0.3rem 0.7rem 0.7rem 0;
     width: 170px;
+    padding-top: 6px;
   }
 
   a {
@@ -204,6 +205,11 @@ $orange: #ee8585;
 .rooms-container {
   display: flex;
   flex-direction: column;
+}
+
+#leftArrow {
+  font-size: 2.5rem;
+  margin: 0 .5rem -.8rem 0;
 }
 
 .myMessageRow,
@@ -344,13 +350,25 @@ $orange: #ee8585;
   color: white;
   overflow: auto;
 
-  .matcherBtn {
-    font-family: 'Biryani', sans-serif;
+  .navRow {
+    display: flex;
+    justify-content: center;
+  }
+
+  .navBtn {
+    // font-family: 'Biryani', sans-serif;
+    display: flex;
     border-radius: 22px;
-    margin: 0 0.7rem 0.7rem 0;
-    width: 205px;
-    font-size: 16px;
-    padding: 5px 0px 0px 0px;
+    margin: 2.5px 0;
+    width: 90%;
+    align-content: center;
+    // font-size: 16px;
+    padding: 6px 6px 3px 6px;
+  }
+
+  .navIcon {
+    font-size: 1.2rem;
+    margin: -2px 0 0 4px;
   }
 
   #createRoomBtn {
@@ -383,10 +401,12 @@ $orange: #ee8585;
 
   .footer {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 190px;
     position: fixed;
     bottom: 1rem;
-    left: 3.8rem;
+    left: 1.5rem;
   }
 }
 
