--- a/src/App.scss
+++ b/src/App.scss
@@ -171,9 +171,20 @@ $orange: #ee8585;
     padding: 3px 12px 0 12px;
   }
 
-  .profileRow {
+  .profileRowRight {
     display: flex;
     justify-content: right;
+  }
+
+  .btn-choose, .btn-upload {
+    border-radius: 20px;
+    margin: 0 .5rem .5rem 0;
+  }
+
+  #profileImg {
+    width: 20vw;
+    border-radius: 5px;
+    box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
   }
 
   .updateBtn {
@@ -291,19 +302,34 @@ $orange: #ee8585;
 
 /* MATCHER */
 #matcher {
-  display: flex;
+  // display: flex;
   justify-content: center;
-  max-height: 140vh;
+  // max-height: 140vh;
+  overflow: auto;
 
   #matcherPaper {
     width: 50%;
-    max-height: 50%;
-    margin: 2% 0 15% 0;
+    // height: 50%;
+    margin: 3% auto 15% auto;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     text-align: center;
     padding: 4rem;
+  }
+
+  #matchLanding {
+    // width: 100%;
+    // height: 70%;
+    // object-fit: cover;
+    border-radius: 5px;
+    box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
+  }
+
+  #findMatchesBtn {
+    border-radius: 32px;
+    color: white;
+    margin: 2rem 0 -1.5rem 0;
   }
 
   #matchCard {
