--- a/src/App.scss
+++ b/src/App.scss
@@ -310,7 +310,7 @@ $orange: #ee8585;
   #matcherPaper {
     width: 50%;
     // height: 50%;
-    margin: 3% auto 15% auto;
+    margin: 2% auto 15% auto;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -338,7 +338,10 @@ $orange: #ee8585;
   }
 
   #matcherImg {
-    max-height: 60%;
+    height: 100%;
+    max-height: 40vh;
+    // object-position: top;
+    object-fit: contain;
   }
 
   .matchImgContainer {
