--- a/src/App.scss
+++ b/src/App.scss
@@ -104,9 +104,11 @@ $orange: #ee8585;
 #landing {
   text-align: left;
   color: white;
-  position: absolute;
-  top: 33%;
-  left: 33%;
+  // position: absolute;
+  top: 10%;
+  overflow: auto;
+  padding-bottom: 8rem;
+  margin: 2% 0 0 20%;
 
   h1 {
     font-family: 'Kanit', sans-serif;
@@ -120,6 +122,15 @@ $orange: #ee8585;
     font-weight: 400;
     letter-spacing: 0.7px;
     margin: 0.1rem 0;
+  }
+
+  .friendsImg {
+    width: 75%;
+    margin: .3rem 0 .5rem 0;
+    // height: 70%;
+    // object-fit: cover;
+    border-radius: 5px;
+    box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
   }
 
   .landBtn {
@@ -219,8 +230,29 @@ $orange: #ee8585;
 }
 
 #leftArrow {
-  font-size: 2.5rem;
-  margin: 0 .5rem -.8rem 0;
+  font-size: 2rem;
+  margin: 0 .5rem -.6rem 0;
+}
+
+.bounce {
+	-moz-animation: bounce 1s infinite;
+	-webkit-animation: bounce 1s infinite;
+	animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  50% {
+    -moz-transform: translateX(-10px);
+    -ms-transform: translateX(-10px);
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
 }
 
 .myMessageRow,
