--- a/src/App.scss
+++ b/src/App.scss
@@ -129,7 +129,8 @@ $orange: #ee8585;
     margin: .3rem 0 .5rem 0;
     // height: 70%;
     // object-fit: cover;
-    border-radius: 5px;
+    // border: 20px solid white;
+    border-radius: 10px;
     box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
   }
 
@@ -354,7 +355,7 @@ $orange: #ee8585;
     // width: 100%;
     // height: 70%;
     // object-fit: cover;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0px 3px 1px -2px rgb(0, 0, 0, 0.2), 0px 2px 2px 0px rgb(0, 0, 0, 0.14), 0px 1px 5px 0px rgb(0, 0, 0, 0.12);
   }
 
